@@ -1,5 +1,6 @@
 Changes for 1.8.3
 
+ - [ZBX-2642] fixed items multiplier field (Vedmak)
  - [ZBX-2639] now when do full clone template, linkage list is cleared (Vedmak)
  - [ZBX-2598] fixed labels with linebreak in maps (Aly)
  - [ZBXNEXT-426] added dashboard option to show unack problems (Vedmak)
